src/scss/block/dataview/view/grid.scss
@import "~scss/_vars";

.blocks {
	.block.blockDataview {
		.cellHead { 
			text-align: left; color: #6c6a5f; padding: 14px; white-space: nowrap; font-weight: 400; line-height: 20px; position: relative; 
			@include text-overflow-nw; cursor: grab;
		}
		.cellHead {
			.cellContent { cursor: grab; }
			.icon { width: 20px; height: 20px; margin: 0px 4px 0px 0px; vertical-align: top; }
			.name { 
				display: inline-block; line-height: 20px; height: 20px; vertical-align: top; width: calc(100% - 24px); 
				@include text-overflow-nw;
			}
			.resize { width: 20px; height: 20px; position: absolute; right: 0px; top: 14px; cursor: col-resize; z-index: 1; }
			.resize {
				.line { width: 1px; height: 100%; background: #e0ded2; position: absolute; top: 0px; left: 19px; }
			}
		}
		.cellHead.last { overflow: visible; }
		.cellHead.last {
			.icon.plus { margin: 0px; }
		}
		.cellHead.isDragging { border: 0px; background: rgba(255,255,255,0.75); }

        .viewItem.viewGrid { border-collapse: collapse; border-bottom: 1px solid #e0ded2; table-layout: fixed; }
		.viewItem.viewGrid {
			.icon.checkbox { vertical-align: top; }

			tbody { border-top: 1px solid #e0ded2; }

			.cellContent { width: 100%; overflow: hidden; height: 20px; line-height: 20px; }
			.cellContent.isName {
				.icon.expand { 
					display: block; position: absolute; right: 2px; top: 2px; opacity: 0; width: 38px; height: calc(100% - 4px);
					background-size: 20px 20px; background-position: 9px 12px; background-color: rgba(255,255,255,0.75);
				}
			}

			.cell.c-object, .cell.c-file { padding-right: 0px; }
			.cellContent.c-object {
				.wrap { white-space: nowrap; }
			}

			tr.active {
				.cellContent.isName {
					.icon.expand { opacity: 1; }
				}
			}
				
			.cell { padding: 14px; border-bottom: 1px solid #e0ded2; vertical-align: top; position: relative; word-break: break-word; }

			.cell.isEditing {
				.cellContent { min-width: 300px; padding: 14px; }
			}
			.cell.isEditing.c-select { 
				.cellContent { padding-bottom: 8px; }
			}
			.cell.isEditing.c-object { 
				.cellContent { padding-bottom: 12px; }
			}
			.cell.isEditing.c-longText { 
				.cellContent { display: none; }
			}
			.cell.isEditing.c-checkbox { 
				.cellContent { min-width: unset; }
			}

			.cell.add { color: $colorDarkGrey; line-height: 20px; padding: 14px; }
			.cell.add {
				.btn { display: inline-block; cursor: pointer; transition: $transitionFast; }
				.btn:hover { color: $colorBlack; }
				.btn:hover {
					.icon.plus { background-image: url('~img/icon/plus/menu1.svg'); }
				}

				.icon { vertical-align: top; margin: 0px 4px 0px 0px; }
				.name { vertical-align: top; display: inline-block; line-height: 20px; height: 20px; vertical-align: top; width: calc(100% - 24px) }
			}

			.cell.c-select { padding-bottom: 8px; }
		}
    }
}

